<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/titleLabelTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAlignment="center"
        style="@style/TextAppearance.MaterialComponents.Headline4"
    />

    <TextView
        android:id="@+id/descriptionLabelTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleLabelTv"
        android:text="@string/login_to_your_existing_account"
        android:textAlignment="center"
        style="@style/TextAppearance.MaterialComponents.Caption"
    />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        app:tint="@color/green" />
    <!--Email-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTil"
        android:layout_width="match_parent"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!--Password-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTil"
        android:layout_width="match_parent"
        android:layout_below="@id/emailTil"
        android:layout_marginTop="10dp"
        android:layout_centerInParent="true"
        app:passwordToggleEnabled="true"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/passwordEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!--Login Button-->
    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordTil"
        android:text="@string/login"/>

    <ImageView
        android:id="@+id/google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/common_google_signin_btn_text_light_normal"
        android:layout_below="@id/loginBtn"
        />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_above="@id/noAccount"
        android:textAlignment="center"
        style="@style/TextAppearance.MaterialComponents.Caption"/>

    <TextView
        android:id="@+id/noAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_register_here"
        android:layout_alignParentBottom="true"
        android:textAlignment="center"
        style="@style/TextAppearance.MaterialComponents.Caption"/>


</RelativeLayout>