<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".SettingsActivity"
    android:orientation="vertical"
    android:gravity="center">

    <Button
        android:id="@+id/editProfileBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Edit Profile"/>

    <Button
        android:id="@+id/changePasswordBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Change Password"/>

    <Button
        android:id="@+id/logoutBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Log out"/>



</LinearLayout>